--- a/redoc.html
+++ b/redoc.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-<redoc spec-url="https://raw.githubusercontent.com/Pawel-Corepas/PortalOsk/master/swagger.yaml?token=AMT3LL2CSHOYUEL7B4MERA25FZHUY"></redoc>
+<redoc spec-url="https://github.com/Pawel-Corepas/PortalOsk/raw/master/swagger.yaml"></redoc>
 <script src="https://cdn.jsdelivr.net/npm/redoc/bundles/redoc.standalone.js"> </script>
 </body>
 
